# openapi-to-mcp-server

./: .gitignore  README.md  mcp_config.json  pyproject.toml  server.py
examples/: pizza_openapi.json
src/: bootstrap.py  config.py  executors.py  loader.py  models.py  parser.py  tool_factory.py
tests/: test_loader.py
